--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 <body>
 	<h1>Building a Better Friend Selector</h1>
 	<div class="tip"><strong>tip:</strong> add ?n=X to the querystring to test with various list sizes, this demo supports up to 50,000 friends (beware!)</div>
-	<div id="bfs"></div>
+	<div id="bfs" class="preloader"></div>
 	<div class="footer">an experiment by <a href="http://bcherry.net">ben cherry</a></div>
 	<script src="jquery-1.3.2.min.js" type="text/javascript"></script>
 	<script src="LAB.min.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		$LAB
+		.block(function() {
+			$('.preloader').html("<img src='ajax-loader.gif' alt='loading..'/>");
+		})
 		.script("template.js")
 		.script("fs_data.js")
 		.script("friend_selector.js")
