--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<script type="text/javascript">
 		$LAB
 		.block(function() {
-			$('.preloader').html("<img src='ajax-loader.gif' alt='loading..'/>");
+			$('.preloader').html("<div class='tip'>i apologize for the long loading time, it's just your browser downloading my massive sample data file.  it should be fine once that's cached</div><img src='ajax-loader.gif' alt='loading..'/>");
 		})
 		.script("template.js")
 		.script("fs_data.js")
